// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginPage disabled form states renders CTA and browser settings warning when cookies are disabled, document is embedded inside iframe, and cross-origin cookies are allowed 1`] = `
<div
  style={
    Object {
      "margin": "auto",
      "maxWidth": "36em",
      "textAlign": "center",
    }
  }
>
  <EuiText
    color="subdued"
  >
    <p>
      <MemoizedFormattedMessage
        defaultMessage="To view this content, open it in a new window or adjust your browser settings to allow third-party cookies."
        id="xpack.security.loginPage.openInNewWindowOrChangeBrowserSettingsTitle"
      />
    </p>
  </EuiText>
  <EuiSpacer />
  <EuiButton
    fill={true}
    href="http://some-host/bar"
    iconSide="right"
    iconType="popout"
    target="_blank"
  >
    <MemoizedFormattedMessage
      defaultMessage="Open in new window"
      id="xpack.security.loginPage.openInNewWindowButton"
    />
  </EuiButton>
</div>
`;

exports[`LoginPage disabled form states renders CTA and cross-origin cookie warning when cookies are disabled, document is embedded inside iframe, and cross-origin cookies are blocked 1`] = `
<div
  style={
    Object {
      "margin": "auto",
      "maxWidth": "36em",
      "textAlign": "center",
    }
  }
>
  <EuiText
    color="subdued"
  >
    <p>
      <MemoizedFormattedMessage
        defaultMessage="To view this content, open it in a new window or ask your administrator to allow cross-origin cookies."
        id="xpack.security.loginPage.openInNewWindowOrChangeKibanaConfigTitle"
      />
    </p>
  </EuiText>
  <EuiSpacer />
  <EuiButton
    fill={true}
    href="http://some-host/bar"
    iconSide="right"
    iconType="popout"
    target="_blank"
  >
    <MemoizedFormattedMessage
      defaultMessage="Open in new window"
      id="xpack.security.loginPage.openInNewWindowButton"
    />
  </EuiButton>
</div>
`;

exports[`LoginPage disabled form states renders as expected when a connection to ES is not available 1`] = `
<DisabledLoginForm
  message={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="See the Kibana logs for details and try reloading the page."
      id="xpack.security.loginPage.esUnavailableMessage"
    />
  }
  title={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Cannot connect to the Elasticsearch cluster"
      id="xpack.security.loginPage.esUnavailableTitle"
    />
  }
/>
`;

exports[`LoginPage disabled form states renders as expected when an unknown loginState layout is provided 1`] = `
<DisabledLoginForm
  message={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="See the Kibana logs for details and try reloading the page."
      id="xpack.security.loginPage.unknownLayoutMessage"
    />
  }
  title={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Unsupported login form layout."
      id="xpack.security.loginPage.unknownLayoutTitle"
    />
  }
/>
`;

exports[`LoginPage disabled form states renders as expected when login is not enabled 1`] = `
<DisabledLoginForm
  message={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Contact your system administrator."
      id="xpack.security.loginPage.noLoginMethodsAvailableMessage"
    />
  }
  title={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Login is disabled."
      id="xpack.security.loginPage.noLoginMethodsAvailableTitle"
    />
  }
/>
`;

exports[`LoginPage disabled form states renders as expected when secure connection is required but not present 1`] = `
<DisabledLoginForm
  message={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Contact your system administrator."
      id="xpack.security.loginPage.requiresSecureConnectionMessage"
    />
  }
  title={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="A secure connection is required for log in"
      id="xpack.security.loginPage.requiresSecureConnectionTitle"
    />
  }
/>
`;

exports[`LoginPage disabled form states renders as expected when xpack is not available 1`] = `
<DisabledLoginForm
  message={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="To use the full set of free features in this distribution of Kibana, please update Elasticsearch to the default distribution."
      id="xpack.security.loginPage.xpackUnavailableMessage"
    />
  }
  title={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Cannot connect to the Elasticsearch cluster currently configured for Kibana."
      id="xpack.security.loginPage.xpackUnavailableTitle"
    />
  }
/>
`;

exports[`LoginPage disabled form states renders warning when cookies are disabled and document is not embedded inside iframe 1`] = `
<DisabledLoginForm
  message={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Enable cookies in your browser settings to continue."
      id="xpack.security.loginPage.requiresCookiesMessage"
    />
  }
  title={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Cookies are required to log in to Elastic"
      id="xpack.security.loginPage.requiresCookiesTitle"
    />
  }
/>
`;

exports[`LoginPage enabled form state renders as expected 1`] = `
<LoginForm
  http={
    Object {
      "addLoadingCountSource": [MockFunction],
      "get": [MockFunction],
    }
  }
  loginAssistanceMessage=""
  notifications={
    Object {
      "feedback": Object {
        "isEnabled": [MockFunction],
      },
      "showErrorDialog": [MockFunction],
      "toasts": Object {
        "add": [MockFunction],
        "addDanger": [MockFunction],
        "addError": [MockFunction],
        "addInfo": [MockFunction],
        "addSuccess": [MockFunction],
        "addWarning": [MockFunction],
        "get$": [MockFunction],
        "remove": [MockFunction],
      },
      "tours": Object {
        "isEnabled": [MockFunction],
      },
    }
  }
  selector={
    Object {
      "enabled": false,
      "providers": Array [
        Object {
          "name": "basic1",
          "type": "basic",
          "usesLoginForm": true,
        },
      ],
    }
  }
/>
`;

exports[`LoginPage enabled form state renders as expected when loginAssistanceMessage is set 1`] = `
<LoginForm
  http={
    Object {
      "addLoadingCountSource": [MockFunction],
      "get": [MockFunction],
    }
  }
  loginAssistanceMessage="This is an *important* message"
  notifications={
    Object {
      "feedback": Object {
        "isEnabled": [MockFunction],
      },
      "showErrorDialog": [MockFunction],
      "toasts": Object {
        "add": [MockFunction],
        "addDanger": [MockFunction],
        "addError": [MockFunction],
        "addInfo": [MockFunction],
        "addSuccess": [MockFunction],
        "addWarning": [MockFunction],
        "get$": [MockFunction],
        "remove": [MockFunction],
      },
      "tours": Object {
        "isEnabled": [MockFunction],
      },
    }
  }
  selector={
    Object {
      "enabled": false,
      "providers": Array [
        Object {
          "name": "basic1",
          "type": "basic",
          "usesLoginForm": true,
        },
      ],
    }
  }
/>
`;

exports[`LoginPage enabled form state renders as expected when loginHelp is set 1`] = `
<LoginForm
  http={
    Object {
      "addLoadingCountSource": [MockFunction],
      "get": [MockFunction],
    }
  }
  loginAssistanceMessage=""
  loginHelp="**some-help**"
  notifications={
    Object {
      "feedback": Object {
        "isEnabled": [MockFunction],
      },
      "showErrorDialog": [MockFunction],
      "toasts": Object {
        "add": [MockFunction],
        "addDanger": [MockFunction],
        "addError": [MockFunction],
        "addInfo": [MockFunction],
        "addSuccess": [MockFunction],
        "addWarning": [MockFunction],
        "get$": [MockFunction],
        "remove": [MockFunction],
      },
      "tours": Object {
        "isEnabled": [MockFunction],
      },
    }
  }
  selector={
    Object {
      "enabled": false,
      "providers": Array [
        Object {
          "name": "basic1",
          "type": "basic",
          "usesLoginForm": true,
        },
      ],
    }
  }
/>
`;

exports[`LoginPage page renders as expected 1`] = `
<div>
  <div
    class="css-1pqcqfr-kbnFullScreenBgCss"
    data-test-subj="loginForm"
  >
    <header
      class="css-1uhsdzt-LoginPage"
    >
      <div
        class="css-das9jl-LoginPage"
      >
        <span
          class="loginWelcome__logo"
        >
          <svg
            aria-label="Elastic Heart"
            height="32"
            viewBox="0 0 600 600"
            width="32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M397.123,463.062 C385.742,472.236 374.608,481.74 362.925,490.512 C342.72,505.683 322.175,520.399 301.43,535.557 C288.696,526.62 276.337,518.237 264.282,509.436 C215.14,473.556 168.519,434.723 126.309,390.778 C104.721,368.302 84.685,344.547 67.561,318.307 C72.239,314.141 76.662,310.33 81.04,306.467 C89.841,298.703 98.633,290.927 107.402,283.126 C125.567,266.967 143.749,250.826 161.859,234.606 C177.403,220.684 192.785,206.58 208.407,192.748 C211.919,189.639 214.836,186.625 214.605,181.805 C217.228,184.155 219.27,186.885 221.995,188.284 C229.072,191.919 236.46,194.947 243.705,198.256 C271.653,211.02 299.585,223.815 327.538,236.565 C347.038,245.459 366.562,254.299 386.22,263.464 C396.039,282.458 405.747,301.132 415.347,319.862 C416.837,322.769 417.837,325.927 419.061,329.398 C418.169,335.01 417.392,340.215 416.367,345.37 C414.017,357.185 411.451,368.957 409.15,380.78 C406.437,394.717 403.94,408.696 401.293,422.645 C399.295,433.174 396.966,443.648 395.325,454.23 C394.893,457.014 396.469,460.109 397.123,463.062z"
              fill="#63ADAC"
            />
            <path
              d="M386.075,263.163 C366.562,254.299 347.038,245.459 327.538,236.565 C299.585,223.815 271.653,211.02 243.705,198.256 C236.46,194.947 229.072,191.919 221.995,188.284 C219.27,186.885 217.228,184.155 214.59,181.639 C214.304,181.247 214.108,180.973 214.108,180.663 C213.751,179.877 213.394,179.402 213.04,178.635 C212.768,177.851 212.493,177.36 212.143,176.613 C211.786,176.168 211.503,175.978 211.201,175.866 C211.182,175.944 211.281,175.817 211.301,175.493 C211.002,174.62 210.683,174.071 210.4,173.359 C210.436,173.196 210.246,172.922 210.237,172.605 C209.874,171.789 209.519,171.289 209.153,170.574 C209.142,170.359 208.95,169.973 208.943,169.699 C208.699,169.158 208.46,168.891 208.222,168.446 C208.222,168.268 208.022,167.974 208.039,167.674 C207.71,166.915 207.364,166.457 207.01,165.997 C207.003,165.997 207.009,165.982 206.993,165.699 C206.735,165.138 206.492,164.858 206.258,164.408 C206.266,164.237 206.07,163.956 206.031,163.68 C205.732,163.146 205.473,162.888 205.224,162.45 C205.235,162.27 205.058,161.956 205.039,161.671 C204.785,161.094 204.551,160.802 204.359,160.357 C204.402,160.203 204.227,159.935 204.216,159.621 C203.847,158.814 203.489,158.322 203.112,157.599 C203.093,157.369 202.886,156.957 202.889,156.711 C202.79,156.112 202.56,155.9 202.187,155.92 C202.174,156.012 202.228,155.834 202.222,155.525 C201.864,154.729 201.511,154.241 201.155,153.546 C201.151,153.34 200.966,152.97 200.961,152.696 C200.726,152.147 200.498,151.871 200.267,151.414 C200.265,151.233 200.047,150.942 200.007,150.687 C199.7,150.232 199.435,150.032 199.135,149.904 C199.101,149.977 199.216,149.865 199.227,149.545 C198.918,148.689 198.598,148.153 198.288,147.441 C198.3,147.265 198.105,146.972 198.116,146.663 C197.773,145.883 197.42,145.413 197.033,144.969 C197,144.995 197.076,144.959 197.102,144.611 C196.454,143.124 195.779,141.985 195.066,140.485 C192.297,134.27 189.566,128.414 186.878,122.162 C189.896,106.122 192.87,90.479 195.845,74.837 C205.836,78.391 216.133,81.269 225.759,85.629 C252.388,97.692 275.942,114.41 296.628,135.054 C300.058,138.476 302.015,138.351 305.429,135.016 C334.306,106.798 367.275,85.183 406.398,73.898 C439.255,64.42 471.976,63.64 503.993,77.253 C523.883,85.71 540.251,98.754 552.049,117.655 C523.031,143.561 494.095,168.899 465.129,194.203 C438.794,217.209 412.427,240.178 386.075,263.163z"
              fill="#EFC543"
            />
            <path
              d="M214.108,180.973 C214.108,180.973 214.304,181.247 214.32,181.413 C214.836,186.625 211.919,189.639 208.407,192.748 C192.785,206.58 177.403,220.684 161.859,234.606 C143.749,250.826 125.567,266.967 107.402,283.126 C98.633,290.927 89.841,298.703 81.04,306.467 C76.662,310.33 72.239,314.141 67.48,317.981 C47.012,288.081 30.625,256.491 26.945,220.014 C23.209,182.981 29.197,147.717 50.966,116.587 C56.701,108.387 64.561,101.674 72.023,94.401 C91.092,98.766 109.601,102.935 128.07,107.272 C141.399,110.402 154.698,113.665 167.965,117.05 C174.31,118.669 180.548,120.709 186.834,122.559 C189.566,128.414 192.297,134.27 195.037,140.835 C195.722,142.683 196.399,143.821 197.076,144.959 C197.076,144.959 197,144.995 197.009,145.286 C197.38,146.042 197.743,146.507 198.105,146.972 C198.105,146.972 198.3,147.265 198.214,147.789 C198.49,148.83 198.853,149.347 199.216,149.865 C199.216,149.865 199.101,149.977 199.161,150.168 C199.497,150.553 199.772,150.748 200.047,150.942 C200.047,150.942 200.265,151.233 200.244,151.701 C200.471,152.437 200.719,152.703 200.966,152.97 C200.966,152.97 201.151,153.34 201.108,153.884 C201.452,154.897 201.84,155.365 202.228,155.834 C202.228,155.834 202.174,156.012 202.188,156.165 C202.316,156.652 202.545,156.865 202.886,156.957 C202.886,156.957 203.093,157.369 203.074,157.935 C203.446,158.979 203.836,159.457 204.227,159.935 C204.227,159.935 204.402,160.203 204.331,160.662 C204.526,161.399 204.792,161.678 205.058,161.956 C205.058,161.956 205.235,162.27 205.226,162.747 C205.502,163.468 205.786,163.712 206.07,163.956 C206.07,163.956 206.266,164.237 206.246,164.704 C206.487,165.442 206.748,165.712 207.009,165.982 C207.009,165.982 207.003,165.997 206.998,166.303 C207.337,167.064 207.679,167.519 208.022,167.974 C208.022,167.974 208.222,168.268 208.212,168.73 C208.451,169.453 208.7,169.713 208.95,169.973 C208.95,169.973 209.142,170.359 209.108,170.914 C209.464,171.953 209.855,172.437 210.246,172.922 C210.246,172.922 210.436,173.196 210.304,173.716 C210.541,174.763 210.911,175.29 211.281,175.817 C211.281,175.817 211.182,175.944 211.228,176.149 C211.588,176.525 211.903,176.696 212.218,176.868 C212.493,177.36 212.768,177.851 213.02,178.956 C213.367,180.038 213.737,180.505 214.108,180.973z"
              fill="#5B9FD9"
            />
            <path
              d="M386.22,263.464 C412.427,240.178 438.794,217.209 465.129,194.203 C494.095,168.899 523.031,143.561 552.232,117.948 C564.198,134.288 570.34,153.061 573.996,172.859 C583.238,222.911 567.74,267.088 541.42,308.467 C532.335,322.75 521.781,336.099 511.23,349.936 C506.546,348.998 502.542,347.949 498.514,347.005 C479.478,342.542 460.447,338.063 441.391,333.685 C433.979,331.983 426.508,330.533 419.064,328.969 C417.837,325.927 416.837,322.769 415.347,319.862 C405.747,301.132 396.039,282.458 386.22,263.464z"
              fill="#4374B8"
            />
            <path
              d="M419.061,329.398 C426.508,330.533 433.979,331.983 441.391,333.685 C460.447,338.063 479.478,342.542 498.514,347.005 C502.542,347.949 506.546,348.998 510.966,350.135 C503.341,359.81 495.625,369.635 487.222,378.832 C461.81,406.646 434.249,432.234 405.484,456.538 C402.946,458.683 400.32,460.723 397.429,462.937 C396.469,460.109 394.893,457.014 395.325,454.23 C396.966,443.648 399.295,433.174 401.293,422.645 C403.94,408.696 406.437,394.717 409.15,380.78 C411.451,368.957 414.017,357.185 416.367,345.37 C417.392,340.215 418.169,335.01 419.061,329.398z"
              fill="#A1C351"
            />
            <path
              d="M186.878,122.162 C180.548,120.709 174.31,118.669 167.965,117.05 C154.698,113.665 141.399,110.402 128.07,107.272 C109.601,102.935 91.092,98.766 72.33,94.262 C89.679,79.281 110.263,71.79 132.797,68.958 C154.043,66.289 174.826,68.747 195.597,74.592 C192.87,90.479 189.896,106.122 186.878,122.162z"
              fill="#D1639D"
            />
          </svg>
        </span>
        <h1
          class="euiTitle loginWelcome__title emotion-euiTitle-m"
          data-test-subj="loginWelcomeTitle"
        >
          Welcome to Elastic
        </h1>
      </div>
    </header>
    <div
      class="css-das9jl-LoginPage"
    >
      <div
        class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
      >
        <div
          class="euiFlexItem emotion-euiFlexItem-grow-1"
        >
          <div
            class="euiPanel euiPanel--transparent euiPanel--paddingMedium emotion-euiPanel-grow-m-m-transparent"
            data-test-subj="loginForm"
          >
            <form>
              <div
                class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow"
                id="generated-id-row"
              >
                <div
                  class="euiFormRow__labelWrapper"
                >
                  <label
                    aria-invalid="false"
                    class="euiFormLabel euiFormRow__label euiFormLabel-isFocused emotion-euiFormLabel"
                    for="generated-id"
                    id="generated-id-label"
                  >
                    Username
                  </label>
                </div>
                <div
                  class="euiFormRow__fieldWrapper"
                >
                  <div
                    class="euiFormControlLayout emotion-euiFormControlLayout"
                  >
                    <div
                      class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
                    >
                      <input
                        aria-required="true"
                        autocomplete="off"
                        class="euiFieldText emotion-euiFieldText"
                        data-test-subj="loginUsername"
                        id="generated-id"
                        name="username"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow"
                id="generated-id-row"
              >
                <div
                  class="euiFormRow__labelWrapper"
                >
                  <label
                    aria-invalid="false"
                    class="euiFormLabel euiFormRow__label emotion-euiFormLabel"
                    for="generated-id"
                    id="generated-id-label"
                  >
                    Password
                  </label>
                </div>
                <div
                  class="euiFormRow__fieldWrapper"
                >
                  <div
                    class="euiFormControlLayout euiFormControlLayout--group emotion-euiFormControlLayout-group"
                  >
                    <div
                      class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper-inGroup-appendOnly"
                      style="--euiFormControlLeftIconsCount: 1;"
                    >
                      <div
                        class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-left"
                      >
                        <span
                          class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
                        >
                          <span
                            aria-hidden="true"
                            class="euiFormControlLayoutCustomIcon__icon"
                            data-euiicon-type="lock"
                          />
                        </span>
                      </div>
                      <input
                        aria-required="true"
                        autocomplete="off"
                        class="euiFieldPassword emotion-euiFieldPassword-inGroup-withToggle"
                        data-test-subj="loginPassword"
                        id="generated-id"
                        name="password"
                        type="password"
                        value=""
                      />
                    </div>
                    <div
                      class="euiFormControlLayout__append emotion-euiFormControlLayout__side-append"
                    >
                      <button
                        aria-label="Show password as plain text. Note: this will visually expose your password on the screen."
                        class="euiButtonIcon emotion-euiButtonIcon-xs-empty-primary"
                        title="Show password as plain text. Note: this will visually expose your password on the screen."
                        type="button"
                      >
                        <span
                          aria-hidden="true"
                          class="euiButtonIcon__icon"
                          color="inherit"
                          data-euiicon-type="eye"
                        />
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
              />
              <div
                class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-center-row"
              >
                <div
                  class="euiFlexItem emotion-euiFlexItem-grow-1"
                >
                  <button
                    class="euiButton emotion-euiButtonDisplay-m-fullWidth-defaultMinWidth-fill-primary"
                    data-test-subj="loginSubmit"
                    type="submit"
                  >
                    <span
                      class="emotion-euiButtonDisplayContent"
                    >
                      Log in
                    </span>
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LoginPage page renders with custom branding 1`] = `
<div>
  <div
    class="css-1pqcqfr-kbnFullScreenBgCss"
    data-test-subj="loginForm"
  >
    <header
      class="css-1uhsdzt-LoginPage"
    >
      <div
        class="css-das9jl-LoginPage"
      >
        <span
          class="loginWelcome__logo"
          style="padding: 0px;"
        >
          <figure
            class="euiImageWrapper emotion-euiImageWrapper"
          >
            <img
              alt="logo"
              class="euiImage emotion-euiImage-customSize"
              src="logo"
              style="max-width: 40px; max-height: 40px;"
            />
          </figure>
        </span>
        <h1
          class="euiTitle loginWelcome__title emotion-euiTitle-m"
          data-test-subj="loginWelcomeTitle"
        >
          Welcome to Elastic
        </h1>
      </div>
    </header>
    <div
      class="css-das9jl-LoginPage"
    >
      <div
        class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
      >
        <div
          class="euiFlexItem emotion-euiFlexItem-grow-1"
        >
          <div
            class="euiPanel euiPanel--transparent euiPanel--paddingMedium emotion-euiPanel-grow-m-m-transparent"
            data-test-subj="loginForm"
          >
            <form>
              <div
                class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow"
                id="generated-id-row"
              >
                <div
                  class="euiFormRow__labelWrapper"
                >
                  <label
                    aria-invalid="false"
                    class="euiFormLabel euiFormRow__label euiFormLabel-isFocused emotion-euiFormLabel"
                    for="generated-id"
                    id="generated-id-label"
                  >
                    Username
                  </label>
                </div>
                <div
                  class="euiFormRow__fieldWrapper"
                >
                  <div
                    class="euiFormControlLayout emotion-euiFormControlLayout"
                  >
                    <div
                      class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
                    >
                      <input
                        aria-required="true"
                        autocomplete="off"
                        class="euiFieldText emotion-euiFieldText"
                        data-test-subj="loginUsername"
                        id="generated-id"
                        name="username"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow"
                id="generated-id-row"
              >
                <div
                  class="euiFormRow__labelWrapper"
                >
                  <label
                    aria-invalid="false"
                    class="euiFormLabel euiFormRow__label emotion-euiFormLabel"
                    for="generated-id"
                    id="generated-id-label"
                  >
                    Password
                  </label>
                </div>
                <div
                  class="euiFormRow__fieldWrapper"
                >
                  <div
                    class="euiFormControlLayout euiFormControlLayout--group emotion-euiFormControlLayout-group"
                  >
                    <div
                      class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper-inGroup-appendOnly"
                      style="--euiFormControlLeftIconsCount: 1;"
                    >
                      <div
                        class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-left"
                      >
                        <span
                          class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
                        >
                          <span
                            aria-hidden="true"
                            class="euiFormControlLayoutCustomIcon__icon"
                            data-euiicon-type="lock"
                          />
                        </span>
                      </div>
                      <input
                        aria-required="true"
                        autocomplete="off"
                        class="euiFieldPassword emotion-euiFieldPassword-inGroup-withToggle"
                        data-test-subj="loginPassword"
                        id="generated-id"
                        name="password"
                        type="password"
                        value=""
                      />
                    </div>
                    <div
                      class="euiFormControlLayout__append emotion-euiFormControlLayout__side-append"
                    >
                      <button
                        aria-label="Show password as plain text. Note: this will visually expose your password on the screen."
                        class="euiButtonIcon emotion-euiButtonIcon-xs-empty-primary"
                        title="Show password as plain text. Note: this will visually expose your password on the screen."
                        type="button"
                      >
                        <span
                          aria-hidden="true"
                          class="euiButtonIcon__icon"
                          color="inherit"
                          data-euiicon-type="eye"
                        />
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
              />
              <div
                class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-center-row"
              >
                <div
                  class="euiFlexItem emotion-euiFlexItem-grow-1"
                >
                  <button
                    class="euiButton emotion-euiButtonDisplay-m-fullWidth-defaultMinWidth-fill-primary"
                    data-test-subj="loginSubmit"
                    type="submit"
                  >
                    <span
                      class="emotion-euiButtonDisplayContent"
                    >
                      Log in
                    </span>
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
